--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,13 @@
+body {
+	font-family: "Quicksand";
+}
+
+.container {
+	width: 95%;
+	margin: 0 auto;
+	max-width: 1200px;
+}
+
 h1.product-title {
 	font-size: 16px;
 	line-height: 22px;
