--- a/css/style.css
+++ b/css/style.css
@@ -356,7 +356,7 @@ input[type=number]::-webkit-outer-spin-button {
 	right: 0;
 	bottom: 0;
 	left: 0;
-	background-color: #1493a4;
+	background-color: white;
 	text-align: center;
 	box-sizing: border-box;
 	padding: 25px;
