--- a/css/style.css
+++ b/css/style.css
@@ -436,6 +436,7 @@ input[type=number]::-webkit-outer-spin-button {
 	float: left;
 	width: 60%;
 	box-sizing: border-box;
+	padding: 25px;
 }
 
 .modal-right {
